# yt-slide-mark

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
tests/: test_mapper.py  test_markdown_gen.py  test_punctuation.py  test_region.py  test_ssim.py  test_utils.py
yt_slide_mark/: __init__.py  __main__.py  cli.py  mapper.py  markdown_gen.py  models.py  punctuation.py  region.py  transcript.py  utils.py  video.py
